--- a/styles/style.css
+++ b/styles/style.css
@@ -1,35 +1,87 @@
-html{
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap');
+html {
     font-family: "Ubuntu Condensed", sans-serif;
-    background-color: #cc00cc;
+    background-color: #F3D8F1;
 }
 
-body{
-    width: 800px;
-    margin: 0 auto;
-    background-color: #ff99ff;
-    padding: 0 20px 20px 20px;
-    border: 5px solid black;
-}
-
-h1:hover {
-    color: red;
-}
-
-h1{
+* {
+    box-sizing: border-box;
     margin: 0;
-    padding: 20px 0;
-    text-shadow: 3px 3px 12px gray;
-    font-size: 60px;
+    padding: 0;
+}
+
+body {
+    margin: 0 auto;
+    background-color: #E6B2E3;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 10%;
+    background-color: #D88DD4;
+}
+
+.logo {
+    cursor: pointer;
+    min-width: 120px;
+    max-height: 162px;
+    max-width: 162px;
+    padding: 0 20px;
+}
+
+.nav__links {
+    list-style: none;
+}
+
+.nav__links li {
+    display: inline-block;
+    padding: 0 20px;
+}
+
+.nav__links li a {
+    transition: all 0.3s ease 0s;
+}
+
+.nav__links li a :hover {
+    color: #CA68C5;
+}
+
+img {
+    display: block;
+}
+
+.title {
+    text-align: center;
+    font-size: 40px;
+}
+
+p {
     text-align: center;
 }
 
-img{
-    display: block;
-    margin: 0 auto;
+p,
+li,
+a {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 2;
+    text-decoration: none;
 }
 
-p,li{
-    font-size: 20px;
-    line-height: 2;
-    letter-spacing: 1px;
+.product {
+    background-color: #549854;
+    display: block;
+    border-style: double;
+    border: 1px solid #000000;
+    width: 200px;
+    height: 200px;
+    margin: 5px;
+}
+
+.product__img {
+    height: 70%;
+    width: auto;
+    margin: auto;
 }
