--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap');
+:root {
+    --color-background: #F3D8F1;
+    --color-header: #D98CD5;
+}
+
 html {
     font-family: "Ubuntu Condensed", sans-serif;
-    background-color: #F3D8F1;
+    background-color: var(--color-background);
+    font-size: 62.5%;
 }
 
 * {
@@ -10,78 +16,78 @@ html {
     padding: 0;
 }
 
-body {
-    margin: 0 auto;
-    background-color: #E6B2E3;
-}
-
 header {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
+    align-content: flex-start;
     align-items: center;
-    padding: 10px 10%;
-    background-color: #D88DD4;
+    /* flex-wrap: wrap; */
+    background-color: var(--color-header);
+    padding: 1rem;
+}
+
+p {
+    margin: 1rem;
+    font-size: 2rem;
 }
 
 .logo {
-    cursor: pointer;
-    min-width: 120px;
-    max-height: 162px;
-    max-width: 162px;
-    padding: 0 20px;
+    flex: 0 0 20%;
+    width: 15%;
+    max-width: 16rem;
+}
+
+.title {
+    margin: 1rem;
+    font-size: 4rem;
+    text-align: center;
 }
 
 .nav__links {
     list-style: none;
 }
 
-.nav__links li {
-    display: inline-block;
-    padding: 0 20px;
-}
-
-.nav__links li a {
-    transition: all 0.3s ease 0s;
-}
-
-.nav__links li a :hover {
-    color: #CA68C5;
-}
-
-img {
-    display: block;
-}
-
-.title {
-    text-align: center;
-    font-size: 40px;
-}
-
-p {
-    text-align: center;
-}
-
-p,
 li,
-a {
-    font-size: 20px;
+a,
+a:link,
+a:visited {
+    font-size: 2rem;
     font-weight: 500;
     line-height: 2;
     text-decoration: none;
 }
 
-.product {
-    background-color: #549854;
-    display: block;
-    border-style: double;
-    border: 1px solid #000000;
-    width: 200px;
-    height: 200px;
-    margin: 5px;
+@media only screen and (max-width: 37.5em) {
+    header {
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+    nav {
+        width: 100%;
+    }
+    .nav__links {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .nav__links li {
+        text-align: center;
+        padding: 0 2rem;
+    }
+    .title {
+        font-size: 3rem;
+    }
 }
 
-.product__img {
-    height: 70%;
-    width: auto;
-    margin: auto;
+@media only screen and (max-width: 413px) {
+    .logo {
+        display: none;
+    }
+    li,
+    a,
+    a:link,
+    a:visited {
+        line-height: 1;
+    }
 }
