--- a/styles/style.css
+++ b/styles/style.css
@@ -1,93 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap');
 :root {
-    --color-background: #F3D8F1;
-    --color-header: #D98CD5;
+    --color-header: rgb(178, 127, 184);
+    --color-background: rgb(211, 197, 222);
 }
 
-html {
-    font-family: "Ubuntu Condensed", sans-serif;
+body {
     background-color: var(--color-background);
-    font-size: 62.5%;
 }
 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-content: flex-start;
-    align-items: center;
-    /* flex-wrap: wrap; */
+header nav {
     background-color: var(--color-header);
-    padding: 1rem;
 }
 
-p {
-    margin: 1rem;
-    font-size: 2rem;
+.bt-wp {
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+    width: 75px;
+    height: 75px;
+    z-index: 100;
+    padding: 2px 5px;
+    color: white;
+    background-color: #4dc247;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
+    border-radius: 50%;
 }
 
-.logo {
-    flex: 0 0 20%;
-    width: 15%;
-    max-width: 16rem;
+.bt-wp a {
+    display: block;
+    position: absolute;
+    bottom: auto;
+    right: auto;
 }
 
-.title {
-    margin: 1rem;
-    font-size: 4rem;
-    text-align: center;
-}
-
-.nav__links {
-    list-style: none;
-}
-
-li,
-a,
-a:link,
-a:visited {
-    font-size: 2rem;
-    font-weight: 500;
-    line-height: 2;
-    text-decoration: none;
-}
-
-@media only screen and (max-width: 37.5em) {
-    header {
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-    }
-    nav {
-        width: 100%;
-    }
-    .nav__links {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-    }
-    .nav__links li {
-        text-align: center;
-        padding: 0 2rem;
-    }
-    .title {
-        font-size: 3rem;
-    }
-}
-
-@media only screen and (max-width: 413px) {
-    .logo {
-        display: none;
-    }
-    li,
-    a,
-    a:link,
-    a:visited {
-        line-height: 1;
-    }
+.bt-wp svg {
+    width: 90%;
+    height: 90%;
+    padding: 5px 2px;
+    fill: white;
+    vertical-align: middle;
 }
